# jujubee

./: .gitmodules  README.md  all_stl.hpp  handle_exceptions.hpp  juju_error_codes.hpp  jujubee.sln  jujubee.vcxproj  jujubee.vcxproj.filters  logger.hpp  main.cpp
cmake/: CMakeLists.txt  CMakeSettings.json
cpp_headers/: handle_exceptions.hpp  resource.h
cpp_source/: main.cpp
docs/: jujubee_logo.xcf  repeats.hpp  template_header.txt  testing.hpp
juju_fs_driver/: driver.c  juju_fs_driver.inf  juju_fs_driver.sln  juju_fs_driver.vcxproj  juju_fs_driver.vcxproj.filters
projects/jujubee/api/: init.cpp
projects/jujubee/api/only-within/: objects.cpp
projects/jujubee/classes/class-utilities/: lcu.cpp
projects/jujubee/classes/exceptions/: juju_except.hpp
projects/jujubee/classes/gui/: button.cpp  taskbar.hpp  textbox.hpp
projects/jujubee/classes/logging/: file_logger.cpp  file_logger.hpp  logs.cpp  window_logger.hpp
projects/jujubee/classes/window/: basic.cpp  basic.hpp  scroll.cpp
projects/jujubee/dependencies/include/: include_dependencies.hpp
projects/jujubee/dependencies/macros/: names.hpp  standard.hpp  types.hpp
projects/jujubee/dependencies/pch/: pch.cpp
projects/jujubee/dependencies/stl/: stl.hpp  stl_includes.hpp
projects/jujubee/dependencies/win_api/: windows_includes.cpp
projects/jujubee/entry/: main.cpp
projects/jujubee/error/: codes.cpp  codes.hpp  error.cpp  error.hpp
projects/jujubee/global/: main.hpp
projects/jujubee/juju_file_system/api/: jfs_utilities.cpp  jfs_utilities.hpp
projects/jujubee/juju_file_system/classes/: drive.hpp  file.cpp  folder.cpp  folder.hpp  jfs_objects.cpp  jfs_objects.hpp  juju_memory.hpp  path.cpp  path.hpp
projects/jujubee/testing/api/: jt_utilities.cpp  jt_utilities.hpp
projects/jujubee/testing/classes/: random.cpp  random.hpp
projects/main_project_exe_jujubee/entry/: main.cpp
projects/main_project_exe_jujubee/pch/: pch.hpp
projects/main_project_exe_jujubee/stl/: stl_includes.cpp  stl_includes.hpp  stl_macro.hpp
projects/main_project_exe_jujubee/win_api/: windows_includes.hpp
projects/main_project_jujubee/api/: init.cpp  init.hpp  utilities.cpp  utilities.hpp
projects/main_project_jujubee/api/only-within/: objects.cpp  objects.hpp
projects/main_project_jujubee/classes/class-utilities/: lcu.cpp  lcu.hpp
projects/main_project_jujubee/classes/error/: codes.cpp  codes.hpp  error.cpp  error.hpp
projects/main_project_jujubee/classes/exceptions/: juju_except.cpp  juju_except.hpp
projects/main_project_jujubee/classes/gui/: button.cpp  button.hpp  label.cpp  label.hpp  listbox.cpp  listbox.hpp  taskbar.cpp  taskbar.hpp  textbox.cpp  textbox.hpp  ui.cpp  ui.hpp
projects/main_project_jujubee/classes/logging/: file_logger.cpp  file_logger.hpp  logs.cpp  logs.hpp  window_logger.cpp  window_logger.hpp
projects/main_project_jujubee/classes/utilities/: api.cpp  api.hpp
projects/main_project_jujubee/classes/window/: basic.cpp  basic.hpp  scroll.cpp  scroll.hpp
projects/main_project_jujubee/dependencies/: include_dependencies.hpp
projects/main_project_jujubee/dependencies/include/: include_dependencies.cpp  include_dependencies.hpp
projects/main_project_jujubee/dependencies/macros/: names.hpp  settings.hpp  standard.hpp  types.hpp
projects/main_project_jujubee/dependencies/pch/: pch.hpp
projects/main_project_jujubee/dependencies/stl/: stl_includes.cpp  stl_includes.hpp  stl_macro.hpp
projects/main_project_jujubee/dependencies/win_api/: windows_includes.cpp  windows_includes.hpp
projects/main_project_jujubee/entry/: main.cpp
projects/main_project_jujubee/error/: codes.hpp  error.cpp  error.hpp
projects/main_project_jujubee/global/: main.hpp
projects/main_project_jujubee/juju_file_system/api/: jfs_utilities.cpp  jfs_utilities.hpp
projects/main_project_jujubee/juju_file_system/classes/: drive.cpp  drive.hpp  file.cpp  file.hpp  folder.hpp  juju128.cpp  juju128.hpp  path.cpp  path.hpp  vhd.hpp
projects/main_project_jujubee/testing/api/: jt_utilities.cpp  jt_utilities.hpp  test_utilities.cpp  test_utilities.hpp
projects/main_project_jujubee/testing/classes/: random.cpp  random.hpp
